# fuchsia

./: .gitignore  DOCUMENTATION.md  README.md  baked_data.jsonl  dev.py  filtered_dataset.jsonl  interleave_grpo.py  new_dataset.jsonl  pyproject.toml  requirements.txt  seed_dataset.json  setup.py  syn_dataset.jsonl  tool_pre_ds.jsonl  tool_pre_ds_short.jsonl  tool_pre_ds_short_output.jsonl
dev/: dev.py  mock.py  mock_client.py  notebook.ipynb
examples/: config.yaml  dev.py  gsm8k_config.yaml  gsm8k_example.py  gsm8k_server.py  gsm8k_train.py  server.py  train.py  vllm_server_config.yaml
experiments/: config.yaml  ds_config.yaml  ds_server.py  ds_train.py  gen.py  mock_server.py  train.py
fuchsia/: __init__.py  activation_checkpointing.py  cli.py  config.py  cpu_offloading.py  cpu_offloding.py  dist_dataset.py  envs.py  grpo.py  grpo_config.py  reward_utils.py  rollout_queue.py  test_checkpoint.py  train.py  trainer.py  trainer_config.py  upgrade_checkpoint.py  utils.py  vllm_client.py  vllm_dp_server.py  vllm_server.py
tests/: test_cli.py
tools/: config.yaml  picothinking_dataset.py  tools_server.py  tools_train.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  (+10 more)
(+13 files in other folders)
