[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuchsia"
version = "0.1.0"
description = "Fuchsia - A minimal library for Reinforcement Learning on Large Language Models (LLMs)"
readme = "README.md"
authors = [
    {name = "Joey00072", email = "00shxf@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0,<5",
    "datasets>=2.15.0",
    "peft>=0.7.0",
    "wandb>=0.16.0",
    "rich>=13.7.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.1",
    "tqdm>=4.66.1",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "lightning>=2.1.0",
    "fabric>=2.1.0",
    "fastapi>=0.114.0",
    "uvicorn>=0.31.0",
    "vllm==0.8.1",
]
urls = {repository = "https://github.com/joey00072/fuchsia"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["reinforcement-learning", "rl", "llm", "large-language-models", "machine-learning", "ai", "nlp"]

[project.scripts]
fuchsia = "fuchsia.cli:main"
